# hermes-sankhya-25

./: .gitignore  README.md  head_agent.py  latest-authority-manifest.json  pyproject.toml
.github/ISSUE_TEMPLATE/: agent-registration.yml
.github/workflows/: heartbeat.yml  village-heartbeat.yml
.well-known/: agent-federation.json  agent.json
agent_template.egg-info/: PKG-INFO  SOURCES.txt
bundles/307b10f0bed489e564d1de1fb696ce0fff3a4aef/: source-authority-bundle.json
bundles/307b10f0bed489e564d1de1fb696ce0fff3a4aef/.authority-exports/: canonical-surface.json  public-summary-registry.json  surface-metadata.json
data/federation/: nadi_outbox.json  peer.json
data/village/: bounties.json  processed_comments.json  state.json
docs/authority/: capabilities.json  charter.md
docs/reports/: federation-map-01.md
docs/specs/: agent-village-spec.md  agent-village-tech-analysis.md
scripts/: federation_utils.py  nadi_daemon.py  setup_node.py
scripts/governance/: __init__.py  _models.py  _protection.py  _repo.py
tests/: test_federation.py  test_governance.py
village/: brain.py  heartbeat.py  nadi_bridge.py
