[project]
name = "agent-template"
version = "0.1.0"
description = "Federation node template for the agent-internet"
requires-python = ">=3.11"
license = "MIT"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agent_template*"]
